test/passing/tests/error2.ml.ref
ocamlformat: ignoring "tests/error2.ml" (syntax error)
File "tests/error2.ml", line 1, characters 0-1:
1 | "asdd
    ^
Error: String literal not terminated
